# parameter-exchange

./: .gitignore  .gitmodules  Datasets.md  Eval.md  README.md  WebInterface.md
cython/: CMakeLists.txt  python_test.sh
cython/certs/: keyserver.crt  keyserver.key  rootCA.crt
cython/ot/: cOTInterface.pxd  cOTInterface.pyx  cython_setup.py
cython/ot/Test/: recvMain.py  sendMain.py
cython/ot_interface/: NWReceiver.cpp  NWReceiver.h  NWSender.cpp  NWSender.h  OTReceiver.cpp  OTReceiver.h  OTSender.cpp  OTSender.h  util.cpp  util.h
cython/ot_interface/Test/: Makefile  NWRecv.cpp  NWSend.cpp  fullTest.cpp  mainRecv.cpp  mainSend.cpp  minimalExample.cpp  runMainSplit.sh  runNWTest.sh
cython/psi/: cPSIInterface.pxd  cPSIInterface.pyx  cython_setup.py
cython/psi/Tests/: config.py  recvMain.py  sendMain.py
cython/psi_interface/: PSIReceiver.cpp  PSIReceiver.h  PSISender.cpp  PSISender.h  util.cpp  util.h
cython/psi_interface/Tests/: Makefile  main.cpp  mainRecv.cpp  mainSend.cpp  runMain.sh  runMainSplit.sh
cython/test/: test_interfaces.cpp
data/: ikv_data.txt  ikv_data_unconverted.json  wzl_data.txt  wzl_data_unconverted.csv
data/certs/: dhparam.pem  rootCA.key  rootCA.srl  storageserver.crt  storageserver.key
docker/: Dockerfile  bashrc  create_container.sh  server-pre-setup.sh  setup.sh
dockerFull/: Dockerfile  build_libraries_within_docker.sh  create_container.sh  install_wolfssl.sh  pre-commit  requirements.txt  vimrc
libraries/: build_libraries.sh  test_all_libs.sh
results_eval/: README.md
results_eval/bloom_full_cap/: butthead_bloom_cap.csv  butthead_bloom_cap_fixed_insert.csv
results_eval/bloom_full_err/: butthead_bloom_fp.csv
results_eval/bloom_full_insert/: butthead_bloom_insert.csv
results_eval/bloom_full_query/: butthead_bloom_query.csv
results_eval/client/: butthead_bloom.csv  butthead_bloom_ram.csv  butthead_client_ikv1.csv  butthead_client_ikv1_ram.csv  butthead_client_ikv2.csv  butthead_client_ikv2_ram.csv  butthead_client_ikv3.csv  butthead_client_wzl1.csv  butthead_client_wzl1_ram.csv  butthead_client_wzl2.csv  butthead_client_wzl2_ram.csv  butthead_psi_vs_bloom2.csv  butthead_psi_vs_bloom2_ram.csv
results_eval/metric/: metric_id1.csv  metric_id10.csv  metric_id11.csv  metric_id12.csv  metric_id2.csv  metric_id3.csv  metric_id4.csv  metric_id5.csv  metric_id6.csv  metric_id7.csv  metric_id8.csv  metric_id9.csv  relOffs10IDLenVar.csv  relOffs10RoundingVar.csv  relOffsParam1-1000.csv
results_eval/metric/Client Evals/: butthead_bloom.csv  butthead_ikv1.csv  butthead_ikv2.csv  butthead_ikv3.csv  butthead_psi_vs_bloom.csv  butthead_wzl1.csv  butthead_wzl2.csv
results_eval/ot/bandwidth/: butthead_bandwidth.csv  butthead_bandwidth_clientram.csv  butthead_bandwidth_serverram.csv  butthead_ot_bandwidth_async.csv  butthead_ot_bandwidth_async_clientram.csv  butthead_ot_bandwidth_async_serverram.csv  computed_bandwidth.txt
results_eval/ot/baseline/: butthead_ot_baseline128.csv  butthead_ot_baseline128_clientram.csv  butthead_ot_baseline128_serverram.csv  butthead_ot_baseline76.csv  butthead_ot_baseline76_clientram.csv  butthead_ot_baseline76_serverram.csv
results_eval/ot/latency/: butthead_latency.csv  butthead_latency_clientram.csv  butthead_latency_serverram.csv
results_eval/ot/malicious/: butthead_ot_malicious.csv  butthead_ot_malicious_clientram.csv  butthead_ot_malicious_serverram.csv
results_eval/ot/numOTs/: butthead_numOTs.csv  butthead_numOTs_clientram.csv  butthead_numOTs_serverram.csv
results_eval/ot/setsize/: butthead_setsize.csv  butthead_setsize_clientram.csv  butthead_setsize_serverram.csv
results_eval/ot/tls/: butthead_ot_tls.csv  butthead_ot_tls_clientram.csv  butthead_ot_tls_serverram.csv
results_eval/provider/: butthead_provider_ikv.csv  butthead_provider_ikv2.csv  butthead_provider_ikv2_ram.csv  butthead_provider_ikv_ram.csv  butthead_provider_record_length.csv  butthead_provider_record_length_ram.csv  butthead_provider_uploads.csv  butthead_provider_uploads_ram.csv  butthead_provider_wzl.csv  butthead_provider_wzl_ram.csv
results_eval/psi/bandwidth/: butthead_psi_bandwidth.csv  butthead_psi_bandwidth_clientram.csv  butthead_psi_bandwidth_serverram.csv
results_eval/scripts/: __init__.py  all.py  bloom_full_cap.py  bloom_full_err.py  bloom_full_insert.py  bloom_full_query.py  client_comm.py  client_ram.py  client_time.py  divider.py  metric.py  ot_comm.py  ot_time.py  provider_comm.py  provider_ram.py  provider_time.py  psi_comm.py  psi_time.py
results_eval/tls/: butthead_ECDHE-RSA-AES256-GCM-SHA384_prime256v1.csv  preserver_DHE-RSA-AES256-GCM-SHA384_prime256v1.csv  preserver_ECDHE-RSA-AES256-GCM-SHA384_prime256v1.csv
src/: OTReceiver.py  PSIReceiver.py  allStart.sh  clean_eval.sh  client.py  client_db_cli.py  configureTestSetup.sh  data_provider.py  kill_celery_remainings.sh  owner_db_cli.py  random_record_generator.py  setup.py  startCelery.sh  startKeyServer.sh  startStorageServer.sh
src/eval/: allEval.sh  bloom_eval.py  client.py  data_provider.py  metricEval.sh  metric_eval.py  ot_eval.py  psi_eval.py  shared.py
src/key_server/: __init__.py  celery.py  client.py  connector.py  key_database.py  main.py  provider.py
src/lib/: base_client.py  base_server.py  config.py  database.py  db_argparser.py  db_cli.py  helpers.py  key_server_backend.py  logging.py  record.py  similarity_metrics.py  storage_server_backend.py  user_database.py
src/storage_server/: __init__.py  celery.py  client.py  connector.py  main.py  provider.py  storage_database.py
src/test/: test_base_client.py  test_base_server.py  test_client.py  test_data_provider.py  test_database.py  test_db_cli.py  test_helpers.py  test_integrity.py  test_key_server_backend.py  test_keyserver_app.py  test_main_scripts.py  test_ot.py  test_ot_receiver.py  test_psi.py  test_psi_receiver.py  test_record.py  test_similarity_metrics.py  test_storage_app.py  test_storage_server.py  test_user_database.py
src/tls_test/: README.md  echo_server.sh  openssl_client.sh  tls_client.py
src/tools/: __init__.py  ikv_parser.py  wzl_parser.py
(+42 files in other folders)
